# korede-backend

./: .dockerignore  .env.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile  command  docker-entrypoint.sh
docs/: render-docker.md
migrations/: 20260428000000_init_core_tables.sql  20260512000000_hospital_auth_kyc.sql  20260516000000_generic_blockchain_references.sql  20260517000000_hospital_registration_form_fields.sql  20260517010000_hospital_email_otp.sql  20260526000000_hospital_login_otp_audit.sql  20260527000000_auth_refresh_tokens.sql  20260604000000_patient_registration_accounts.sql  20260604100000_patient_email_verification.sql  20260604110000_password_reset_otps.sql  20260604120000_patient_case_declarations.sql  20260604130000_patient_declarations.sql  20260606100000_hospital_case_creation.sql  20260606110000_medical_case_public_links.sql  20260606120000_auth_refresh_tokens_patient_role.sql  20260610120000_one_open_case_per_patient.sql  20260610150000_case_donations_paystack.sql  20260620110000_add_sui_proof_retry_state.sql  20260621120000_hybrid_donations_checkout_dva.sql  20260704130000_hospital_document_review_message.sql  20260704150000_patient_case_declaration_snapshots.sql  20260709120000_checkout_payment_reservations.sql  20260709150000_hospital_settlements.sql
solana/korede_donations/: Anchor.toml  Cargo.toml  README.md  package.json
solana/korede_donations/programs/korede_donations/: Cargo.toml
solana/korede_donations/programs/korede_donations/src/: lib.rs
src/: lib.rs  main.rs
src/adapters/: auth.rs  checkout_reservation.rs  donation_proof.rs  (+5 more)
(+66 files in other folders)
