[package]
name = "korede_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.6", features = ["trace"] }

# Async runtime
# Note axum will not work without tokio
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }

# API documentation
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "5", features = ["axum"] }

# Configuration
dotenvy = "0.15"

# Domain primitives
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }

# Errors and logging
argon2 = "0.5"
async-trait = "0.1"
aws-credential-types = "1"
aws-sdk-s3 = "1"
aws-smithy-runtime-api = "1"
aws-types = "1"
base64 = "0.22"
jsonwebtoken = "9"
mime = "0.3"
sanitize-filename = "0.5"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
