[package]
name = "korede_donations"
version = "0.1.0"
description = "Korede donation proof program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "korede_donations"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
